Overflow bug?

--- a/public/menu.css
+++ b/public/menu.css
@@ -173,8 +173,8 @@
     #menu .menu-items.is-open li {
         margin: 47px 0;
     }
-    /* .tgl+.tgl-btn {
+    .tgl+.tgl-btn {
         margin-right: 3em;
         margin-top: 1em;
-    } */
+    }
 }
